challenge/scenarios/04-traffic-shifting/networking.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  hosts:
    - todo-repo
  gateways:
  - todo-client-gateway
  http:
  - route:
    - destination:
        port:
          number: 8081
        host: todo-repo
        subset: release
      weight: 80
    - destination:
        port:
          number: 8081
        host: todo-repo
        subset: canary
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: todo-repo
  labels:
    app: todo-repo
  spec:
    host: todo-repo
    subsets:
      - name: release
        labels:
          track: release
          version: v2
      - name: canary
        labels:
          track: canary
          version: v3
