challenge/scenarios/04-traffic-shifting/release-v3.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: todo-repo
  labels:
    app: todo-repo
spec:
  hosts:
    - todo-repo
  http:
  - route:
    - destination:
        host: todo-repo
        subset: v2
